--- a/trunk/of/app/views/layouts/application.rhtml
+++ b/trunk/of/app/views/layouts/application.rhtml
@@ -6,7 +6,7 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>OpenFoundry -- <%= controller.action_name %><%= " __#{$$}__" if current_user.has_role?('site_admin')%></title>
   <link rel="shortcut icon" href="http://www.openfoundry.org/images/favicon.ico" />
-  <% bundle do %>
+  <% bundle :packr_options => {:shrink_vars => true, :base62 => false} do %>
   <%= stylesheet_link_tag "scaffold", "openfoundry", "header", "transmenu" %>
   <%= javascript_include_tag "prototype", "effects", "application", "transmenu" %>
   <%= javascript_include_tag 'calendar/calendar' %>
