--- a/trunk/of/app/views/news/_home_news.rhtml
+++ b/trunk/of/app/views/news/_home_news.rhtml
@@ -7,6 +7,7 @@
 <ul>
   <%for news in newsList %>
     <li>
+    <%= if news.created_at > 7.days.ago then image_tag('/images/hot.png') end %>
     <%= link_to news.subject, {:controller => "news", :action => "show", :id => news.id}, :class => "news_subject" %>
     <%= news.created_at.strftime "%Y-%m-%d" %>
     </li>
