--- a/of/app/views/news/_listn.rhtml
+++ b/of/app/views/news/_listn.rhtml
@@ -7,7 +7,7 @@
 <ul>
   <%for news in newsList %>
   <li>
-    <%= link_to h(news.project.name + ' - ' + news.subject), news1_path(:id => news.id, :project_id => news.catid) %>
+    <%= link_to h(news.project.summary + ' - ' + news.subject), news1_path(:id => news.id, :project_id => news.catid) %>
   </li>
   <%end %>
 </ul>
