--- a/of/app/views/projects/new.rhtml
+++ b/of/app/views/projects/new.rhtml
@@ -1,5 +1,5 @@
 <div id="ProjectNew">
-<h1><%=_("Create Project")%></h1>
+<h1><%=_("Create Project") + "<span style=\"font-size:10px; margin-left: 20px;\">(" + required_icon() + _("required_icon") + ")</span>"%></h1>
 
 <% form_tag :action => 'create' do %>
   <%= render :partial => 'form', :locals => { :is_edit => false } %>
