--- a/trunk/of/app/views/partials/_lang.rhtml
+++ b/trunk/of/app/views/partials/_lang.rhtml
@@ -1,2 +1,2 @@
-<%= language_select "lang", GetText.locale.to_s, :onchange => "SetLang(this.value)"%>
+<%= language_select "lang", FastGettext.locale, :onchange => "SetLang(this.value)"%>
 
