--- a/trunk/of/app/views/projects/_list.rhtml
+++ b/trunk/of/app/views/projects/_list.rhtml
@@ -27,7 +27,7 @@
       <a href="<%= url_for(:action => 'show', :id => project.id) %>">
         <img src="<%= url_for(:controller => :images,:action => "cached_image", :id => "#{project.icon}_64") %>" align="left" alt="<%= _('Project Logo') %>" title="<%= h(project.summary) %>"/>
       </a>
-      <%= h "#{project.description}".chars[0..140] + "#{'...' if project.description.chars.length > 140 }" %><br/>
+      <%= h "#{project.description}".chars[0..130] + "#{'...' if project.description.chars.length > 130 }" %>
     </td>
   </tr>
 <% end -%>
