--- a/trunk/of/public/stylesheets/openfoundry.css
+++ b/trunk/of/public/stylesheets/openfoundry.css
@@ -331,3 +331,7 @@ width:500px;
 
 /* for current page text on will_paginate */
 .current { text-decoration: underline overline; font-weight:bold; }
+
+/* for layout of news list */
+.sort { margin-bottom: 5px; }
+li.news_list { border-bottom: solid 1px grey; margin-bottom: 10px; }
