--- a/of/app/views/projects/vcs_access.rhtml
+++ b/of/app/views/projects/vcs_access.rhtml
@@ -4,22 +4,21 @@ when Project::VCS[:SUBVERSION]
 -%>
 <h1><%= _('Subversion Access') %></h1>
 <p>
-  This project's Subversion repository can be checked out through SVN with the following instruction set:
+  <%= _('Subversion Access|Description') %>
   <br/><b><%= @src %></b>
 </p>
 <p><%= h(@vcs_desc) %></p>
-<p><a href="http://of.openfoundry.org/help/vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%
-AD%98%E5%8F%96SVN%E6%AA%94%E6%A1%88%E5%BA%AB">See more instruction</a>.</p>
+<p><a href="http://of.openfoundry.org/help/vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%AD%98%E5%8F%96SVN%E6%AA%94%E6%A1%88%E5%BA%AB"><%= _('Subversion Access|See More') %></a>.</p>
 
 <% when Project::VCS[:CVS] -%>
 <h1><%= _('Anonymous CVS Access') %></h1>
 <p>
-  This project's CVS repository can be checked out through anonymous (pserver) CVS with the following instruction set.
+  <%= _('Subversion Access|Description') %>
   <br/><b><%= @src %></b>
 </p>
 <p><%= h(@vcs_desc) %></p>
 <p><a href="http://of.openfoundry.org/help/vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%
-AD%98%E5%8F%96CVS%E6%AA%94%E6%A1%88%E5%BA%AB">See more instruction</a>.</p>
+  AD%98%E5%8F%96CVS%E6%AA%94%E6%A1%88%E5%BA%AB"><%= _('Subversion Access|See More') %></a>.</p>
 
 <% when Project::VCS[:SUBVERSION_CLOSE] -%>
 <h1><%= _('Subversion: Members Only') %></h1>
