--- a/trunk/of/app/views/openfoundry/index.rhtml
+++ b/trunk/of/app/views/openfoundry/index.rhtml
@@ -44,7 +44,7 @@
   </div>
   <div id="Module_Text_ProjectManagement" style="display:none;">
 專案管理(Project Management)<br/><br/>
-專案管理是針對專案管理者所開發出來的管理工具組合，此工具包括專案時程規劃（Gantt Chart，甘特圖）、專案徵人、行事曆、檔案釋出規劃和下載以及軟體開發進度等等。
+專案管理中包含了一些工具來協助管理員，針對一般專案資訊有基本資料設定、引用資訊、參考文獻、專案新聞、尋求支援，而軟體部分包含了規劃釋出、下載者資訊設定和統計，另外還有專案的成員及權限管理。  
   </div>
   <div id="Module_Text_Webhosting" style="display:none;">
 網站代管(Web Hosting)<br/><br/>
