--- a/trunk/of/app/views/projects/_list.rhtml
+++ b/trunk/of/app/views/projects/_list.rhtml
@@ -16,7 +16,7 @@
     <td><a href="<%= url_for(:action => 'show', :id => project.id) %>"><%= h(project.summary) %></a></td>
     <td align="center"><%= h tz_date(project.created_at) %></td>
     <% tmp = project.releases.active.latest.first %>
-    <td align="center"><%= h( tmp.due) if tmp %></td>
+    <td align="center"><%= h(tmp.due) if tmp %></td>
     <td rowspan="2" align="center">
       <%= link_to _('Download'), download1_path(:project_id => project.id) %><br />
       (<%= h project.project_counter %>)
@@ -27,7 +27,7 @@
       <a href="<%= url_for(:action => 'show', :id => project.id) %>">
         <img src="<%= url_for(:controller => :images,:action => "cached_image", :id => "#{project.icon}_64") %>" align="left" alt="<%= _('Project Logo') %>" title="<%= h(project.summary) %>"/>
       </a>
-      <%= h "#{project.description}".chars[0..130] + "#{'...' if project.description.chars.length > 130 }" %>
+      <%= h project.description.chars[0..130] + "#{'...' if project.description.chars.length > 130 }" %>
     </td>
   </tr>
 <% end -%>
