--- a/of/app/views/user/my_projects.rhtml
+++ b/of/app/views/user/my_projects.rhtml
@@ -2,12 +2,12 @@
 <h1><%= _('My Projects') %></h1>
 
 <%= paginate = will_paginate @my_projects %>
-<table class="UserProjectList">
+<table class="ProjectList">
   <tr>
     <th><%= link_to _('Project Summary'),  sort_param('listing', Project, 'summary', 'summary') %></th>
     <th><%= link_to _('Created At'),  sort_param('listing', Project, 'created_at', 'created_at') %></th>
     <th><%= link_to _('Latest File'),  sort_param('listing', Project, 'updated_at', 'updated_at') %></th>
-    <th><%= link_to _('Download'),  sort_param('listing', Project, 'project_counter', 'project_counter') %></th>
+    <th width="70"><%= link_to _('Download'),  sort_param('listing', Project, 'project_counter', 'project_counter') %></th>
   </tr>
 <% i=0; class_name = ""; -%>
 <% for project in @my_projects -%>
@@ -17,16 +17,18 @@
     <td><a href="<%= project_url(project.id) %>"><%= h(project.summary) %></a></td>
     <td align="center"><%= h tz_date(project.created_at) %></td>
     <td align="center"><%= h tz_date(project.updated_at) %></td>
-    <td align="center"><%= h project.project_counter %></td>
+    <td rowspan="2"  align="center">
+      <%= link_to _('Download'), releases_path(:project_id => project.id) %><br />
+      (<%= h project.project_counter %>)
+    </td>
   </tr>
   <tr class="item_b <%=class_name%>">
     <td colspan="3">
       <a href="<%= project_url(project.id) %>">
         <img src="<%= url_for(:controller => :images,:action => "cached_image", :id => "#{project.icon}_64") %>" align="left" alt="<%= _('Project Logo') %>" title="<%= h(project.summary) %>"/>
       </a>
-      <%= h project.description.chars[0..150] + "..." %><br/>
+      <%= h project.description.chars[0..130] + "#{ '...' if project.description.chars.length > 130 }" %><br/>
     </td>
-    <td align="center"><%= link_to _('Download'), releases_path(:project_id => project.id) %></td>
   </tr>
 <% end -%>
 </table>
