--- a/of/app/views/partials/_top_menu_data.rhtml
+++ b/of/app/views/partials/_top_menu_data.rhtml
@@ -18,7 +18,7 @@ var menudata=
         {id:'<%=_('menu_Latest Releases')%>', url:'/releases/latest'},
         {id:'<%=_('menu_Top Downloads')%>', url:'/releases/top'},
         {id:'<%=_('menu_Help Wanted')%>', url:'/projects/jobs'},
-        {id:'<%=_('menu_WebHosting')%>', url:'http://webhosting.openfoundry.org/'},
+        {id:'<%=_('menu_WebHosting')%>', url:wo('http://webhosting.openfoundry.org/')},
         {id:'<img src="/images/icon/star.gif"/><%=_('Create Project')%>', url:'/projects/new'}
       ]
     },
