--- a/trunk/of/app/views/user/my_projects.rhtml
+++ b/trunk/of/app/views/user/my_projects.rhtml
@@ -1,10 +1,10 @@
-<div id="UserProjectList">
+<div id="ProjectList">
 <h1><%= _('My Projects') %></h1>
 
 <%= paginate = will_paginate @my_projects %>
 <table class="ProjectList">
   <tr>
-    <th><%= link_to _('Project Summary'),  sort_param('listing', Project, 'summary', 'summary') %></th>
+    <th width="600"><%= link_to _('Project Summary'),  sort_param('listing', Project, 'summary', 'summary') %></th>
     <th><%= link_to _('Created At'),  sort_param('listing', Project, 'created_at', 'created_at') %></th>
     <th><%= link_to _('Latest File'),  sort_param('listing', Project, 'updated_at', 'updated_at') %></th>
     <th width="70"><%= link_to _('Download'),  sort_param('listing', Project, 'project_counter', 'project_counter') %></th>
@@ -24,10 +24,17 @@
   </tr>
   <tr class="item_b <%=class_name%>">
     <td colspan="3">
-      <a href="<%= project_url(project.id) %>">
-        <img src="<%= url_for(:controller => :images,:action => "cached_image", :id => "#{project.icon}_64") %>" align="left" alt="<%= _('Project Logo') %>" title="<%= h(project.summary) %>"/>
-      </a>
-      <%= h project.description.chars[0..130] + "#{ '...' if project.description.chars.length > 130 }" %><br/>
+      <table>
+        <tr>
+          <td class="imgarea">
+            <a href="<%= project_url(project.id) %>">
+              <img src="<%= url_for(:controller => :images,:action => "cached_image", :id => "#{project.icon}_64") %>" align="center" alt="<%= _('Project Logo') %>" title="<%= h(project.summary) %>"/>
+            </a>
+          </td>
+          <td class="txtarea">
+            <%= h project.description.chars[0..130] + "#{ '...' if project.description.chars.length > 130 }" %></td>
+        </tr>
+      </table>  
     </td>
   </tr>
 <% end -%>
