--- a/trunk/of/app/views/help/nsc_project.rhtml
+++ b/trunk/of/app/views/help/nsc_project.rhtml
@@ -2,20 +2,48 @@
   國科會專案進駐說明
 </h1>
 <h2>
+  <a id=ag2c name=RegisterUser></a>註冊使用者（計畫申請人）
+</h2>
+<ol>
+  <li>
+    <span style=COLOR:#ff0000>為了加強專案與計</span><span style=COLOR:#ff0000>畫</span><span style=COLOR:#ff0000>申請人的相關性</span>，新申請註冊專案必需註冊「<span style=COLOR:#ff0000>計畫申請人帳號</span>」，使其成為專案的建立者。
+  </li>
+  <li>
+    依一般註冊的方式，在未登入的狀態下，點選畫面左上方的「註冊」連結。<br>
+    <div id=rim: style=TEXT-ALIGN:left>
+      <img src="nsc_project_images/dhhd869h_1c77j4vgs_b.jpg" style="WIDTH:302px; HEIGHT:153px">
+    </div>
+    <br>
+  </li>
+  <li>
+    在註冊的內容中，請填寫「計畫申請人」的「<span style=COLOR:#ff0000>真實姓名</span>」。
+    <div id=c7x7 style=TEXT-ALIGN:left>
+      <img src="nsc_project_images/dhhd869h_2gws7fbgb_b.jpg" style="WIDTH:375px; HEIGHT:166px">
+    </div>
+  </li>
+  <li>
+    再繼續完成註冊使用者的流程。<br>
+  </li>
+</ol>
+<br>
+<h2>
   <a id=w4rk name=RegisterProject></a>註冊專案
 </h2>
 <ol>
   <li>
+    <span style=COLOR:#ff0000>請使用「計畫申請人」帳號登入</span>，再開始註冊專案流程。
+  </li>
+  <li>
     依照一般註冊專案之過程，點選上方選單＂所有專案＂或＂帳號＂中的＂建立專案。<br>
-    <img src=nsc_project_images/dhhd869h_111d4dvvgc8_b.jpg style="WIDTH:128px; HEIGHT:259px"><img src=nsc_project_images/dhhd869h_112cdgvf5fs_b.jpg style="WIDTH:130px; HEIGHT:192px">
+    <img src="nsc_project_images/dhhd869h_111d4dvvgc8_b.jpg" style="WIDTH:128px; HEIGHT:259px"><img src="nsc_project_images/dhhd869h_112cdgvf5fs_b.jpg" style="WIDTH:130px; HEIGHT:192px">
   </li>
   <li>
     與一般專案不同的地方。<br>
     最下面的欄位＂國科會計畫編號＂，為國科會專案的必填欄位，填入如 NSC97-2218-E-123-456 的代碼<br>
     若有此專案進入到第二或三之後的年度，此欄位用逗號分隔填入所有年度的代碼，例如：<br>
     NSC97-2218-E-123-456, NSC98-2218-E-123-456, NSC99-2218-E-123-456<br>
-    <div id=l95n style="PADDING:1em 0pt; TEXT-ALIGN:left">
-      <img src=nsc_project_images/dhhd869h_113g2r4gqc3_b.jpg style="WIDTH:553px; HEIGHT:73px">
+    <div id=l95n style=TEXT-ALIGN:left>
+      <img src="nsc_project_images/dhhd869h_113g2r4gqc3_b.jpg" style="WIDTH:553px; HEIGHT:73px">
     </div>
     <br>
   </li>
@@ -34,36 +62,35 @@
       </li>
       <li>
         專案描述：<br>
-        例如：OpenFoundry是一個供自由軟體專案開發人員討論、編寫、管理其專案內容所設置的共同作業平台。一般的使用者可以透過此平台下載所需的自由軟體，
-        並提供下載程式的改良意見，本專案受到國科會計畫及中研院共同補助，本年度的國科會計畫編號為NSC97-2218-E-001-001。<br>
+        例如：OpenFoundry是一個供自由軟體專案開發人員討論、編寫、管理其專案內容所設置的共同作業平台。一般的使用者可以透過此平台下載所需的自由軟體， 並提供下載程式的改良意見，本專案受到國科會計畫及中研院共同補助，本年度的國科會計畫編號為NSC97-2218-E-001-001。<br>
         (專案的簡短介紹文字，長度為3至255個字，<span style=COLOR:#ff0000>請類同此例將國科會計畫編號編寫安插於「專案描述」中</span>，方便審核委員查找及參閱計畫成果。)<br>
       </li>
     </ul>
-    <div id=rxox style="PADDING:1em 0pt; TEXT-ALIGN:left">
-      <div id=w8uo style="PADDING:1em 0pt; TEXT-ALIGN:left">
-        <img src=nsc_project_images/dhhd869h_116dsq7n7hm_b.jpg style="WIDTH:631px; HEIGHT:219px">
+    <div id=rxox style=TEXT-ALIGN:left>
+      <div id=w8uo style=TEXT-ALIGN:left>
+        <img src="nsc_project_images/dhhd869h_116dsq7n7hm_b.jpg" style="WIDTH:631px; HEIGHT:219px">
       </div>
-      <br>
     </div>
   </li>
+  <li>
+    再繼續完成註冊專案的流程。
+  </li>
 </ol>
-<div id=m2mx style="PADDING:1em 0pt; TEXT-ALIGN:left">
+<div id=m2mx style=TEXT-ALIGN:left>
   <h2>
     <a id=ck:y name=ProjectReview></a>專案審查
   </h2>
   <ol>
     <li>
       NSC Project選單及功能<br>
-      當您為國科會專案的專案管理員(Admin)，在專案選單的＂檢視專案＂及＂管理專案＂最下方會新增＂NSC
-      Project＂選單，進入後即可進行審查工作之進行。<br>
-      當您是專案的審查者(Reviewer)，在專案選單的＂檢視專案＂最下方會新增＂NSC Project＂選單，進入後即可進行審查工作之進行。<br>
-      <div id=wvwp style="PADDING:1em 0pt; TEXT-ALIGN:left">
-        <img src=nsc_project_images/dhhd869h_115gp9683gq_b.jpg style="WIDTH:186px; HEIGHT:221px"><br>
+      當您為國科會專案的<span style=COLOR:#ff0000>專案管理員(Admin)</span>，在專案選單的＂檢視專案＂及＂管理專案＂最下方會新增＂NSC Project＂選單，進入後即可進行審查工作之進行。<br>
+      當您是專案的<span style=COLOR:#ff0000>審查者(Reviewer)</span>，在專案選單的＂檢視專案＂最下方會新增＂NSC Project＂選單，進入後即可進行審查工作之進行。<br>
+      <div id=wvwp style=TEXT-ALIGN:left>
+        <img src="nsc_project_images/dhhd869h_115gp9683gq_b.jpg" style="WIDTH:186px; HEIGHT:221px"><br>
         <br>
-        下圖為專案審查的頁面，可在此檢視已上傳的文件，若欲上傳文件，可按下圖中最後的＂Upload a new
-        document＂連結，將依您的角色判斷可上傳的文件。專案管理者可上傳 "report", 審查者可上傳 "review"。
-        <div id=iz:q style="PADDING:1em 0pt; TEXT-ALIGN:left">
-          <img src=nsc_project_images/dhhd869h_117d97n3sf9_b.jpg style="WIDTH:259px; HEIGHT:190px">
+        下圖為專案審查的頁面，可在此檢視已上傳的文件，若欲上傳文件，可按下圖中最後的＂Upload a new document＂連結，將依您的角色判斷可上傳的文件。專案管理者可上傳 "report", 審查者可上傳 "review"。
+        <div id=iz:q style=TEXT-ALIGN:left>
+          <img src="nsc_project_images/dhhd869h_117d97n3sf9_b.jpg" style="WIDTH:259px; HEIGHT:190px">
         </div>
       </div>
     </li>
@@ -72,17 +99,15 @@
       <ul>
         <li>
           專案管理員(Admin)：<br>
-          當開放上傳審查文件期間，進入＂NSC Project＂-&gt;＂Upload a new document＂功能，將可上傳文件。
+          當開放上傳審查文件時，依其「<span style=COLOR:#ff0000>開放期間及文件類型</span>」，進入＂NSC Project＂-&gt;＂Upload a new document＂功能，將可上傳文件。<br>
         </li>
         <li>
           審查人員(Reviewer)：<br>
           當開放審查時，進入＂NSC Project＂功能，下載＂審查文件＂。<br>
-          完成審查後，進入＂NSC Project＂-&gt;＂Upload a new
-          document＂功能，上傳審查後的文件。
+          完成審查後，進入＂NSC Project＂-&gt;＂Upload a new document＂功能，上傳審查後的文件。
         </li>
       </ul>
     </li>
   </ol>
   <br>
 </div>
-<br>
